Add user and item data on transaction listing
